# GPUKernelLoopInfo

./: CMakeLists.txt  main.cpp
tests/adam-cuda/: main.cu
tests/gauss/: gaussian-cuda-nvptx64-nvidia-cuda-sm_61.bc
